# SemReBot2

./: Dockerfile  README.md  download_models.py  env.sh  package_tests.sh  read.ipynb  readme.ipynb  run.sh  run2.sh  run_carla.sh  run_old.sh  run_rolling.sh  tasks.txt  terminal.sh  test_results.txt  tests.sh
..bfg-report/2024-04-03/14-30-47/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2024-04-03/14-30-47/protected-dirt/: ac0f3141-HEAD.csv
..bfg-report/2024-04-03/14-44-10/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
datasets/: fine_tune_pipeline.ipynb  fine_tune_qlora.ipynb  output_and_pddl_10_samples.jsonl  pddl_dataset.ipynb  remove_newlines.py  single_output.jsonl  single_output.txt  single_output_10_samples.jsonl  train.jsonl
gazebo/: building_robot.sdf  world_demo.sdf
latex/: 03_chapter2.tex  04_chapter3.tex  05_chapter4.tex  06_chapter5.tex  99_appendix.tex  acknowledgements.tex  main.tex  mtprarprt.cls  references.bib
llm/mistral/: 4bit_code_gen.ipynb  domain.pddl  mistral.ipynb  mistral_4_bit.ipynb  mistral_4b.py  mistral_qlora_tiny.ipynb  mistral_specific.ipynb  mixtral.ipynb
llm/mixtral/: mixtral.ipynb  mixtral_4_bit.ipynb
ros2_ws/: dependencies.repos
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/results/: results.txt
ros2_ws/src/bt_plansys_turtlebot/: .c_cpp_properties_template.json  .settings_template.json  CMakeLists.txt  package.xml
ros2_ws/src/bt_plansys_turtlebot/bt_xml/: navigate.xml  recharge.xml  transport.xml  transport_advanced.xml  transport_simple.xml
ros2_ws/src/bt_plansys_turtlebot/config/: params.yaml
ros2_ws/src/bt_plansys_turtlebot/include/bt_plansys_turtlebot/: nav2_action_server_node.hpp  navigate_node.hpp  task_controller_node.hpp
ros2_ws/src/bt_plansys_turtlebot/include/bt_plansys_turtlebot/bt_nodes/: ApproachPallet.hpp  LeavePallet.hpp  LiftFork.hpp  LowerFork.hpp  Move.hpp  Navigate.hpp  RaiseFork.hpp  Recharge.hpp
ros2_ws/src/bt_plansys_turtlebot/launch/: bt_plansys_turtlebot.launch.py
ros2_ws/src/bt_plansys_turtlebot/pddl/: domain.pddl
ros2_ws/src/bt_plansys_turtlebot/src/: hello_world_node.cpp  nav2_action_server_node.cpp  navigate_node.cpp  task_controller_node.cpp
ros2_ws/src/bt_plansys_turtlebot/src/bt_nodes/: ApproachPallet.cpp  LeavePallet.cpp  LiftFork.cpp  LowerFork.cpp  Navigate.cpp  RaiseFork.cpp  Recharge.cpp
ros2_ws/src/nlp_handler/: package.xml  setup.cfg  setup.py
ros2_ws/src/nlp_handler/config/: params.yaml
ros2_ws/src/nlp_handler/launch/: nlp_handler.launch.py
ros2_ws/src/nlp_handler/nlp_handler/: mistral_lifecycle_node.py  mistral_node.py  whisper_lifecycle_node.py  whisper_node.py
ros2_ws/src/semrebot2/semrebot2_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/semrebot2/semrebot2_lifecycle_manager/: CMakeLists.txt  package.xml
ros2_ws/src/semrebot2/semrebot2_lifecycle_manager/include/semrebot2_lifecycle_manager/: LifecycleManager.hpp
ros2_ws/src/semrebot2/semrebot2_lifecycle_manager/src/: LifecycleManager.cpp  lifecycle_manager_node.cpp
ros2_ws/src/semrebot2/semrebot2_natural_language_processer/: package.xml  setup.cfg  setup.py
ros2_ws/src/semrebot2/semrebot2_task_controller/: CMakeLists.txt  package.xml  problem.txt  test_results.txt  test_set.txt
ros2_ws/src/task_controller/: .settings_template.json  CMakeLists.txt  package.xml  tasks.txt
ros2_ws/src/task_controller/launch/: task_controller.launch.py
ros2_ws/src/task_controller/src/: nav2_sim_node.cpp  old_task_controller_node.cpp  task_controller_node.cpp
stt/: fast_whisper.ipynb  fast_whisper.py  transcriber.py
stt/audio_files/: speech.wav.REMOVED.git-id
stt/mic_to_mp3/: Makefile  README.txt  audiocapture  main.cpp
stt/mic_to_mp3/lib/lame-3.100/: Makefile  (+3 more)
stt/mic_to_mp3/utils/: utilities.cpp  utilities.hpp
stt/portaudio/: Makefile  audiocapture  main.cpp
stt/pyaudio/: audio_recorder.py
testing/: mistral_results_4bit.txt  mistral_results_half_precision_labeled.txt  whisper.ipynb  whisper_results.txt
testing/audio_files/: 1.wav.REMOVED.git-id  4.wav.REMOVED.git-id  7.wav.REMOVED.git-id  8.wav.REMOVED.git-id
testing/mistral/: check_problem.ipynb  compare_instances.txt  compare_instances_specifc.txt  compare_predicates_labeled.txt  compare_predicates_specific.txt  create_shot.ipynb  data_plotter.ipynb  data_plotter_labeled.ipynb  data_plotter_specific.ipynb  mistral.ipynb  mistral.py  mistral_first.py  mistral_labeled.ipynb  mistral_labeled_first.py  mistral_labeled_second.py  mistral_results.txt  mistral_results_4bit.txt  mistral_results_4bit_labeled.txt  mistral_results_4bit_specific.txt  mistral_results_8bit.txt  mistral_results_8bit_labeled.txt  mistral_results_full_precision.txt  mistral_results_half_precision_labeled.txt  mistral_second.py  mistral_specific_1.py  mistral_specific_2.py  output_results_specific.txt  outputs_specific.txt  outputs_specific_edited.txt  problems.txt  problems2.txt  prompts.txt  shot_set.jsonl  shot_set_full_domain.jsonl  shot_set_labeled.jsonl  shot_set_simple_domain.jsonl  shots.jsonl  shots_backup.jsonl  test.bash  test_set.jsonl  (+1 more)
testing/plansys2/: domain.txt  plotting.ipynb  results.txt
testing/popf/: plotter.ipynb
testing/references/: 02.txt  04.txt  09.txt  1.txt  3.txt  7.txt  8.txt
testing/results/: 1mistral_results_4bit_labeled.txt  3mistral_results_4bit.txt  3mistral_results_8bit.txt  3mistral_results_full_precision_labeled.txt  4mistral_results_4bit_labeled.txt  4mistral_results_8bit_labeled.txt  5mistral_results_4bit.txt  5mistral_results_4bit_labeled.txt  6mistral_results_4bit.txt  6mistral_results_4bit_labeled.txt  compare_goals.txt  compare_goals_labeled.txt  compare_instances_labeled.txt  compare_predicates.txt  mistral_results_4bit_labeled_2.txt  mistral_test_results_specific.txt  output_results.txt  output_results_labeled.txt
testing/whisper/: avg_plot  memory_plot  plotting.ipynb  plotting.py  ref_format.ipynb  references.txt  rtf_plot  wer_plot  whisper.ipynb
testing/whisper/references/: 05.txt  06.txt  10.txt
(+603 files in other folders)
