<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_plansys_turtlebot</name>
  <version>0.0.1</version>
  <description>First test package to incorporate PlanSys2 with BT and Turtlebot3. Adapted from PlanSys2 BT example package.</description>
  <maintainer email="elias.kalland@outlook.com">Elias Helle Kalland</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- API to retrieve information about-->
  <!-- resources (libraries, plugins etc.)-->
  <depend>ament_index_cpp</depend>
  
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>nav2_msgs</depend>

  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>plansys2_bt_actions</depend>

  <!-- execution-time package dependencies -->
  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
